--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_HOST = localhost
 DATABASE = loginsystem_db
-DATABASE_USER = root
-DATABASE_PASSWORD = rootPassword
+DATABASE_USER = db_user
+DATABASE_PASSWORD = password
 PORT = 5000
 ACCESS_TOKEN_SECRET= tokenkey
 REFRESH_TOKEN_SECRET= tokenrefkey
